Add 'opens' for java.io libraries to unblock build (#1616)
* Add  for java.io libraries to unblock build
* Only add the argument if java version is 9+ when opens was added

Signed-off-by: Peter Nied <petern@amazon.com>